okd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alanmrvl-yesod-web-example
spec:
  selector:
    app: alanmrvl-yesod-web-example
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
