okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alanmrvl-yesod-web-example
spec:
  to:
    kind: Service
    name: alanmrvl-yesod-web-example
  port:
    targetPort: 3000
  # tls:
  #   termination: edge  # Remove this section for plain HTTP
